manifests/02-networkpolicy-allow-ingress-webhook.yaml
# Allow ingress to pod-identity-webhook:9443 (webhook)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-webhook
  namespace: openshift-cloud-credential-operator
  annotations:
    capability.openshift.io/name: CloudCredential
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  ingress:
  - ports:
    - protocol: TCP
      port: 9443
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - pod-identity-webhook
  policyTypes:
  - Ingress
